# valkey-operator

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  actions.yaml  charmcraft.yaml  concierge-k8s.yaml  concierge-vm.yaml  concierge.yaml  config.yaml  metadata.yaml  pyproject.toml  spread.yaml  tox.ini
.claude/skills/integration-test/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: automatic-doc-checks.yml  check-removed-urls.yml  ci.yaml  cla-check.yml  integration_test.yaml  markdown-style-checks.yml  release.yaml
common/: pyproject.toml  tox.ini
common/common/: __init__.py  lib_fetch_charmcraft.yaml  literals.py  statuses.py
common/common/core/: base_workload.py  cluster_state.py  models.py
common/common/events/: base_events.py
common/common/managers/: cluster.py  config.py
common/common/tests/unit/: test_base_events.py
docs/: .custom_wordlist.txt  conf.py  index.md  requirements.txt  tutorial.md
docs/how-to/: clients.md  deploy.md  index.md  manage-passwords.md  scale-horizontally.md  tls.md
docs/how-to/tls/: disable-tls.md  enable-tls.md  index.md  manage-private-keys.md
docs/reference/: contact.md  index.md
src/: charm.py  literals.py  statuses.py  workload.py  workload_k8s.py  workload_vm.py
src/common/: client.py  custom_events.py  exceptions.py  helpers.py  k8s_client.py  locks.py  topology_observer.py
src/core/: base_workload.py  cluster_state.py  models.py
src/events/: backup.py  base_events.py  external_clients.py  ldap.py  tls.py
src/managers/: auth.py  backup.py  cluster.py  config.py  external_clients.py  sentinel.py  tls.py  topology.py
src/managers/config-template/: sentinel.conf  valkey.conf
src/scripts/: topology_observer.py
tests/: AGENTS.md  conftest.py
tests/integration/: conftest.py  continuous_writes.py  cw_helpers.py  glide_helpers.py  helpers.py  test_charm.py  test_rootless.py
tests/integration/backup/: conftest.py  test_s3_backup.py  test_s3_restore.py
tests/integration/clients/: test_client_relation.py
tests/integration/clients/requirer-charm/: charmcraft.yaml  constraints.txt  metadata.yaml  pyproject.toml  requirements.txt
tests/integration/clients/requirer-charm/lib/charms/data_platform_libs/v1/: data_interfaces.py
tests/integration/clients/requirer-charm/src/: charm.py  client.py  continuous_writes.py  cw_helpers.py  glide_helpers.py
tests/integration/ha/: conftest.py  test_failover.py  test_network_cut.py  test_scaling.py  test_storage_reuse.py  test_two_unit_availability.py
tests/integration/ha/helpers/: deploy_chaos_mesh.sh  destroy_chaos_mesh.sh  helpers.py
tests/integration/k8s/: conftest.py  helpers.py  test_charm.py
tests/integration/k8s/ha/: continuous_writes.py  helpers.py  test_scaling.py
tests/integration/k8s/tls/: test_tls.py
tests/integration/storage/: test_storage.py
tests/integration/tls/: test_certificate_options.py  test_certificate_rotation.py  test_private_key.py  test_tls.py
tests/integration/vm/: conftest.py  test_charm.py
tests/integration/vm/ha/: test_scaling.py
tests/integration/vm/tls/: test_tls.py
tests/spread/k8s/test_certificate_options.py/: task.yaml
tests/spread/k8s/test_certificate_rotation.py/: task.yaml
tests/spread/k8s/test_charm.py/: task.yaml
tests/spread/k8s/test_client_relation.py/: task.yaml
tests/spread/k8s/test_failover.py/: task.yaml
tests/spread/k8s/test_failover_tls_off.py/: task.yaml
tests/spread/k8s/test_failover_tls_on.py/: task.yaml
tests/spread/k8s/test_network_cut_tls_off.py/: task.yaml
tests/spread/k8s/test_network_cut_tls_on.py/: task.yaml
tests/spread/k8s/test_private_key.py/: task.yaml
tests/spread/k8s/test_rootless.py/: task.yaml
tests/spread/k8s/test_scaling.py/: task.yaml
tests/spread/k8s/test_storage_reuse.py/: task.yaml
tests/spread/k8s/test_tls.py/: task.yaml
tests/spread/vm/test_tls.py/: task.yaml
tests/unit/: conftest.py  helpers.py  test_backup.py  test_charm.py  test_client_relation.py  test_cluster_manager.py  test_config_manager.py  test_ldap.py  test_locks.py  test_min_replicas_reconcile.py  test_restore.py  test_scaledown.py  test_storage.py  test_substrates.py  test_tls.py  test_topology.py  test_workload_exec_stream.py  test_workload_vm.py
valkey-cluster-operator/kubernetes/: .gitignore
valkey-operator/kubernetes/: charmcraft.yaml  metadata.yaml  pyproject.toml  spread.yaml  tox.ini
valkey-operator/kubernetes/src/: charm.py  literals.py  workload.py
valkey-operator/kubernetes/tests/integration/: common_statuses.py  conftest.py  helpers.py  test_charm.py
valkey-operator/kubernetes/tests/spread/test_charm.py/: task.yaml
valkey-operator/kubernetes/tests/unit/: conftest.py  test_charm.py
(+14 files in other folders)
